--- a/src/app/file/file.component.html
+++ b/src/app/file/file.component.html
@@ -1,3 +1,3 @@
-<div class="file">
-  {{text$ | async}}
+<div class="file" contenteditable="true">
+  <ng-template #container></ng-template>
 </div>
